Team Task on JavaScript

--- a/index.html
+++ b/index.html
@@ -7,28 +7,77 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Team Task</title>
 </head>
-<body>
-    <section id="main-section">
+<body> 
+    <section>
         <div class="container">
-            <div class="card-flex">
-                <div class="card">
-                    <div class="card-content">
-                        <h1 class="group-name">Group name: <span class="artemis"></span></h1>
-                        <ul>
-                            <li>Merit</li>
-                            <li>Abdulsamad</li>
-                            <li>Comely</li>
-                            <li>Gabriel-Eta Ekpo</li>
-                            <li>Emmanuel Stephen</li>
-                            <li>Ayobami S O</li>
-                            <li>Danny</li>
-                        </ol>
+            <div class="card">
+                <div class="card-body">
+                    <div class="left-side"></div>
+                    <div class="right-side"></div>
+                    <div class="back-side">
+                        <h1>GROUP NAME: <span class="artemis"></span></h1>
+                        <div class="team-members">
+                            <div class="team-lead">
+                                <div class="card-content">
+                                    <img src="img/Merit.jpg" alt="">
+                                    <div class="card-text">
+                                        <p class="bold">Dike Merit</p>
+                                        <p>Team LEAD</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="card-content">
+                                    <div class="card-text">
+                                        <img src="img/Abdulsamad.jpg" alt="">
+                                        <p class="bold">Abdulsamad</p>
+                                        <p>Team Member</p>
+                                    </div>
+                                </div>
+                                <div class="card-content">
+                                    <div class="card-text">
+                                        <img src="img/Comely.jpg" alt="">
+                                        <p class="bold">Comely</p>
+                                        <p>Team Member</p>
+                                    </div>
+                                </div>
+                                <div class="card-content">
+                                    <div class="card-text">
+                                        <img src="img/Danny.jpg" alt="">
+                                        <p class="bold">Danny</p>
+                                        <p>Team Member</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="card-content">
+                                    <div class="card-text">
+                                        <img src="img/Ayobami.jpg" alt="">
+                                        <p class="bold">Ayobami S O</p>
+                                        <p>Team Member</p>
+                                    </div>
+                                </div>
+                                <div class="card-content">
+                                    <div class="card-text">
+                                        <img src="img/Gabrial.jpg" alt="">
+                                        <p class="bold">Gabriel-Eta</p>
+                                        <p>Team Member</p>
+                                    </div>
+                                </div>
+                                <div class="card-content">
+                                    <div class="card-text">
+                                        <img src="img/Stephen.jpg" alt="">
+                                        <p class="bold">Emmanuel</p>
+                                        <p>Team Member</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
 
     <script src="js/app.js"></script>
 </body>
